[update] Refactor of fetching
